@@ -1,3 +1,8 @@
+2007-12-13  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interface/R/igraph/R/print.R (print.igraph) : use the 'print' method
+	of complex attributes
+
 2007-11-15  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/centrality.R (igraph.arpack.default) : updated
